--- a/index.html
+++ b/index.html
@@ -103,10 +103,13 @@
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 35px;
+    gap: 35px; /* spacing between cards */
+    justify-items: center; /* centers cards if row has extra space */
   }
 
   .product-card {
+    width: 100%;
+    max-width: 300px;
     background: rgba(255, 255, 255, 0.65);
     backdrop-filter: blur(12px);
     border-radius: 20px;
@@ -169,7 +172,6 @@
     color: white;
   }
 </style>
-
 </head>
 <body>
 
@@ -195,104 +197,37 @@
     <input type="text" id="searchBar" placeholder="Search products...">
   </div>
 
+  <!-- All products will populate here -->
   <div class="product-grid" id="homeProductGrid"></div>
-
-    <!-- PRODUCT 1 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/h8gjyos4xd369h5l7a5bg/Photo-Dec-07-2025-4-41-30-PM.jpg?rlkey=ylkrpglloxr2dg6xtlli7akkw&st=f0yt0nea&raw=1" alt="Movado Watch" />
-      <div class="product-info">
-        <h3>Movado</h3>
-        <p>Movado Bold Quest Automatic Watch, Swiss Self-Winding Movement, Stainless Steel Bracelet 39mm</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$995</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$796</span>
-        </p>
-        <a href="https://amzn.to/3KtUjL9">Buy Now</a>
-      </div>
-    </div>
-  
-
-    <!-- PRODUCT 2 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/p42tbv80gbtq53yhi7e45/Photo-Dec-07-2025-5-19-46-PM.jpg?rlkey=mqiekmtc76us7j60x36s325p5&st=v5os1hlb&raw=1" alt="Movado Museum Classic" />
-      <div class="product-info">
-        <h3>Movado</h3>
-        <p>Movado Museum Classic Men's Automatic Watch, Stainless Steel Bracelet, Self-Winding Luxury Timepiece - 40mm</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$1495</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$1196</span>
-        </p>
-        <a href="https://amzn.to/4awGZjC">Buy Now</a>
-      </div>
-    </div>
-  
-
-    <!-- PRODUCT 4 -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/fn2iqk6dlv8urqoxc70id/Photo-Dec-07-2025-2-42-00-PM.jpg?rlkey=lqj8hdh6pr9r1nv4rky2vuvwf&st=ovmcr0yx&raw=1" alt="APPLE IPAD AIR" />
-      <div class="product-info">
-        <h3>APPLE IPAD AIR</h3>
-        <p>Apple iPad Air 11-inch with M3 chip Built for Apple Intelligence, Liquid Retina Display, 128GB, 12MP Front/Back Camera, Wi-Fi 6E, Touch ID, All-Day Battery Life — Purple</p>
-        <p style="font-size: 1.1rem; margin-top: 10px;">
-          <span style="text-decoration: line-through; color: #777;">$599</span>
-          <span style="color: #d40000; font-weight: 700; margin-left: 10px;">$499</span>
-        </p>
-        <a href="https://amzn.to/3KwQTHw">Buy Now</a>
-      </div>
-    </div>
-
-  
-    <!-- PRODUCT — Stila Foundation -->
-    <div class="product-card">
-      <img src="https://www.dropbox.com/scl/fi/zl82k7qdq0maoy03k30hv/Photo-Dec-07-2025-5-44-08-PM.jpg?rlkey=keaxx7w7rvk9l9kstrq2zi908&st=6jsdb82m&raw=1" alt="Stila Stay All Day Foundation & Concealer">
-      <div class="product-info">
-        <h3>Stila Stay All Day Foundation & Concealer</h3>
-        <p>Long-lasting, flawless-coverage foundation and concealer duo designed to stay in place all day. Lightweight, blendable formula with a natural matte finish.</p>
-        <p style="font-size: 1.1rem; font-weight: 700; color: #d40000; margin-top: 10px;">$42</p>
-        <a href="https://amzn.to/4rXVaEO">Buy Now</a>
-      </div>
-    </div>
-
-  </div>
 </div>
 
 <footer>
   © 2025 KhanceptDesigns – All Rights Reserved
 </footer>
 
-<!-- SEARCH FILTER SCRIPT -->
 <script>
+  const homeGrid = document.getElementById("homeProductGrid");
+  const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+
+  if (allProducts.length === 0) {
+    homeGrid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding: 50px;">
+      No products available yet. Please add products in the Admin Editor.
+    </p>`;
+  } else {
+    homeGrid.innerHTML = allProducts.join("");
+  }
+
+  // Live Search
   document.getElementById("searchBar").addEventListener("keyup", function() {
     let filter = this.value.toLowerCase();
-    let cards = document.querySelectorAll(".product-card");
+    let cards = homeGrid.querySelectorAll(".product-card");
 
     cards.forEach(card => {
       let text = card.innerText.toLowerCase();
       card.style.display = text.includes(filter) ? "block" : "none";
     });
   });
-<script>
-const homeGrid = document.getElementById("homeProductGrid");
-const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-
-if (allProducts.length === 0) {
-  homeGrid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding: 50px;">
-    No products available yet. Please add products in the Admin Editor.
-  </p>`;
-} else {
-  homeGrid.innerHTML = allProducts.join("");
-}
-
-// Live Search
-document.getElementById("searchBar").addEventListener("keyup", function() {
-  let filter = this.value.toLowerCase();
-  let cards = homeGrid.querySelectorAll(".product-card");
-
-  cards.forEach(card => {
-    let text = card.innerText.toLowerCase();
-    card.style.display = text.includes(filter) ? "block" : "none";
-  });
-});
 </script>
+
 </body>
 </html>
