--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>KhanceptDesigns – Featured Products</title>
 
-<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
@@ -23,154 +22,47 @@
     color: white;
   }
 
-  header h1 {
-    font-size: 3rem;
-    margin: 0;
-    font-weight: 700;
-    letter-spacing: -1px;
-  }
+  header h1 { font-size: 3rem; margin:0; font-weight:700; letter-spacing:-1px; }
+  header p { margin-top:12px; font-size:1.2rem; opacity:0.85; }
 
-  header p {
-    margin-top: 12px;
-    font-size: 1.2rem;
-    opacity: 0.85;
-  }
+  nav { background:#000; padding:15px 0; text-align:center; }
+  nav ul { list-style:none; margin:0; padding:0; }
+  nav ul li { display:inline-block; margin:0 20px; }
+  nav ul li a { color:white; text-decoration:none; font-weight:600; font-size:1.1rem; transition:0.3s ease; }
+  nav ul li a:hover { color:#aaa; }
 
-  nav {
-    background: #000;
-    padding: 15px 0;
-    text-align: center;
-  }
+  .container { width:90%; max-width:1200px; margin:50px auto; }
+  .section-title { font-size:2.4rem; text-align:center; margin-bottom:40px; font-weight:700; }
 
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+  .search-container { width:100%; max-width:500px; margin:0 auto 40px auto; }
+  #searchBar { width:100%; padding:14px 18px; font-size:1rem; border-radius:12px; border:2px solid #ccc; background:white; outline:none; transition:0.3s; }
+  #searchBar:focus { border-color:#000; box-shadow:0 0 10px rgba(0,0,0,0.15); }
 
-  nav ul li {
-    display: inline-block;
-    margin: 0 20px;
-  }
-
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1.1rem;
-    transition: 0.3s ease;
-  }
-
-  nav ul li a:hover {
-    color: #aaa;
-  }
-
-  .container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 50px auto;
-  }
-
-  .section-title {
-    font-size: 2.4rem;
-    text-align: center;
-    margin-bottom: 40px;
-    font-weight: 700;
-  }
-
-  .search-container {
-    width: 100%;
-    max-width: 500px;
-    margin: 0 auto 40px auto;
-  }
-
-  #searchBar {
-    width: 100%;
-    padding: 14px 18px;
-    font-size: 1rem;
-    border-radius: 12px;
-    border: 2px solid #ccc;
-    background: white;
-    outline: none;
-    transition: 0.3s;
-  }
-
-  #searchBar:focus {
-    border-color: #000;
-    box-shadow: 0 0 10px rgba(0,0,0,0.15);
-  }
-
-  .product-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 35px; /* spacing between cards */
-    justify-items: center; /* centers cards if row has extra space */
-  }
+  .product-grid { display:grid; grid-template-columns:repeat(auto-fill, minmax(280px, 1fr)); gap:35px; }
 
   .product-card {
-    width: 100%;
-    max-width: 300px;
     background: rgba(255, 255, 255, 0.65);
     backdrop-filter: blur(12px);
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 8px 26px rgba(0, 0, 0, 0.15);
+    border-radius:20px;
+    overflow:hidden;
+    box-shadow:0 8px 26px rgba(0,0,0,0.15);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
   }
 
-  .product-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
-  }
+  .product-card:hover { transform: translateY(-10px); box-shadow:0 15px 35px rgba(0,0,0,0.25); }
+  .product-card img, .product-card video { width:100%; height:260px; object-fit:contain; background:#f5f5f5; }
 
-  .product-card img,
-  .product-card video {
-    width: 100%;
-    height: 260px;
-    object-fit: contain;
-    background: #f5f5f5;
-  }
-
-  .product-info {
-    padding: 20px;
-  }
-
-  .product-info h3 {
-    margin: 0;
-    font-size: 1.3rem;
-    font-weight: 600;
-  }
-
-  .product-info p {
-    margin-top: 8px;
-    font-size: 0.95rem;
-    opacity: 0.85;
-  }
-
+  .product-info { padding:20px; }
+  .product-info h3 { margin:0; font-size:1.3rem; font-weight:600; }
+  .product-info p { margin-top:8px; font-size:0.95rem; opacity:0.85; }
   .product-info a {
-    display: inline-block;
-    margin-top: 14px;
-    padding: 12px 20px;
-    background: linear-gradient(135deg, #000 0%, #444 100%);
-    color: white;
-    text-decoration: none;
-    font-weight: 600;
-    border-radius: 10px;
-    transition: 0.3s;
+    display:inline-block; margin-top:14px; padding:12px 20px;
+    background:linear-gradient(135deg, #000 0%, #444 100%);
+    color:white; text-decoration:none; font-weight:600; border-radius:10px; transition:0.3s;
   }
+  .product-info a:hover { transform: translateY(-3px); background:linear-gradient(135deg, #444 0%, #000 100%); }
 
-  .product-info a:hover {
-    transform: translateY(-3px);
-    background: linear-gradient(135deg, #444 0%, #000 100%);
-  }
-
-  footer {
-    text-align: center;
-    padding: 25px;
-    margin-top: 50px;
-    background: #111;
-    color: white;
-  }
+  footer { text-align:center; padding:25px; margin-top:50px; background:#111; color:white; }
 </style>
 </head>
 <body>
@@ -182,7 +74,7 @@
 
 <nav>
   <ul>
-    <li><a href="#featured">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="index.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
@@ -192,12 +84,10 @@
 <div class="container">
   <h2 class="section-title">Featured Products</h2>
 
-  <!-- Search Bar -->
   <div class="search-container">
     <input type="text" id="searchBar" placeholder="Search products...">
   </div>
 
-  <!-- All products will populate here -->
   <div class="product-grid" id="homeProductGrid"></div>
 </div>
 
@@ -206,27 +96,43 @@
 </footer>
 
 <script>
-  const homeGrid = document.getElementById("homeProductGrid");
-  const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+const homeGrid = document.getElementById("homeProductGrid");
+const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
 
-  if (allProducts.length === 0) {
-    homeGrid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding: 50px;">
+function displayProducts(grid, products){
+  if(products.length === 0){
+    grid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding:50px;">
       No products available yet. Please add products in the Admin Editor.
     </p>`;
   } else {
-    homeGrid.innerHTML = allProducts.join("");
+    grid.innerHTML = products.map(prod => `
+      <div class="product-card">
+        <img src="${prod.img}" alt="${prod.name}" />
+        <div class="product-info">
+          <h3>${prod.name}</h3>
+          <p>${prod.desc}</p>
+          <p style="font-size:1.1rem; margin-top:10px;">
+            ${prod.oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${prod.oldPrice}</span>` : ""}
+            <span style="color:#d40000; font-weight:700; margin-left:${prod.oldPrice ? "10px" : "0"};">$${prod.salePrice}</span>
+          </p>
+          <a href="${prod.link}">Buy Now</a>
+        </div>
+      </div>
+    `).join("");
   }
+}
 
-  // Live Search
-  document.getElementById("searchBar").addEventListener("keyup", function() {
-    let filter = this.value.toLowerCase();
-    let cards = homeGrid.querySelectorAll(".product-card");
+// Display all products
+displayProducts(homeGrid, allProducts);
 
-    cards.forEach(card => {
-      let text = card.innerText.toLowerCase();
-      card.style.display = text.includes(filter) ? "block" : "none";
-    });
-  });
+// Live Search
+document.getElementById("searchBar").addEventListener("keyup", function(){
+  const filter = this.value.toLowerCase();
+  const filtered = allProducts.filter(prod => 
+    prod.name.toLowerCase().includes(filter) || prod.desc.toLowerCase().includes(filter)
+  );
+  displayProducts(homeGrid, filtered);
+});
 </script>
 
 </body>
