--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="#home">Home</a></li>
     <li><a href="index.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
