--- a/featured.html
+++ b/featured.html
@@ -80,8 +80,8 @@
 
 <nav>
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="index.html">Featured</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="featured.html">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
