--- a/admin.html
+++ b/admin.html
@@ -3,272 +3,126 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Product Editor</title>
-
+<title>Admin Editor – KhanceptDesigns</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f4f4f4;
-    padding: 20px;
-  }
-
-  h1 {
-    text-align: center;
-    font-size: 2rem;
-  }
-
-  .admin-box {
-    max-width: 500px;
-    margin: auto;
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  }
-
-  label {
-    font-weight: bold;
-    display: block;
-    margin-top: 12px;
-  }
-
-  input, textarea {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-
-  button {
-    margin-top: 20px;
-    width: 100%;
-    padding: 12px;
-    background: black;
-    color: white;
-    border: none;
-    border-radius: 6px;
-    font-size: 1.1rem;
-    cursor: pointer;
-  }
-
-  button:hover {
-    background: #444;
-  }
-
-  .success-message {
-    margin-top: 20px;
-    color: green;
-    text-align: center;
-    font-weight: bold;
-    opacity: 0;
-    transition: opacity 0.4s ease;
-  }
-
-  .success-show {
-    opacity: 1 !important;
-  }
-
-  .product-list {
-    margin: 40px auto;
-    max-width: 900px;
-  }
-
-  .product-item {
-    background: #fff;
-    padding: 15px;
-    margin-bottom: 12px;
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  }
-
-  .product-item span {
-    font-weight: bold;
-  }
-
-  .product-actions button {
-    margin-left: 10px;
-    padding: 6px 12px;
-    font-size: 0.9rem;
-  }
-
-  .product-actions button.edit {
-    background: #2a9d8f;
-    color: white;
-    border: none;
-    border-radius: 5px;
-  }
-
-  .product-actions button.delete {
-    background: #e63946;
-    color: white;
-    border: none;
-    border-radius: 5px;
-  }
-
+body{font-family:"Poppins",sans-serif;background:#f4f4f4;margin:0;padding:20px;}
+h1{color:#222;}
+form{background:white;padding:20px;border-radius:12px;box-shadow:0 5px 15px rgba(0,0,0,0.1);max-width:500px;margin-bottom:40px;}
+form input, form select{width:100%;padding:10px;margin:8px 0;border-radius:8px;border:1px solid #ccc;}
+form button{padding:10px 15px;background:#000;color:white;border:none;border-radius:8px;cursor:pointer;}
+form button:hover{background:#333;}
+table{width:100%;border-collapse:collapse;margin-top:20px;}
+table th, table td{padding:10px;border:1px solid #ccc;text-align:left;}
+table th{background:#eee;}
+button.edit, button.delete{padding:5px 10px;margin-right:5px;border:none;border-radius:6px;cursor:pointer;}
+button.edit{background:#1E90FF;color:white;} 
+button.delete{background:#d40000;color:white;}
 </style>
 </head>
-
 <body>
 
-<h1>Admin Product Editor</h1>
+<h1>Admin Editor – KhanceptDesigns</h1>
 
-<div class="admin-box">
-  <label>Image URL</label>
-  <input id="imgUrl" placeholder="https://example.com/image.jpg">
+<form id="productForm">
+  <input type="text" id="name" placeholder="Product Name" required>
+  <input type="text" id="desc" placeholder="Description">
+  <input type="text" id="img" placeholder="Image URL" required>
+  <input type="number" id="salePrice" placeholder="Sale Price" required>
+  <input type="number" id="oldPrice" placeholder="Old Price (optional)">
+  <input type="text" id="link" placeholder="Product Link" required>
+  <input type="text" id="category" placeholder="Category (e.g., Makeup, Skincare)">
+  <button type="submit">Add / Update Product</button>
+</form>
 
-  <label>Product Name</label>
-  <input id="productName" placeholder="Product Title">
-
-  <label>Description</label>
-  <textarea id="productDesc" placeholder="Short product description"></textarea>
-
-  <label>Original Price (leave empty if no sale)</label>
-  <input id="oldPrice" placeholder="Example: 149.99">
-
-  <label>Sale Price (required if old price exists)</label>
-  <input id="salePrice" placeholder="Example: 99.99">
-
-  <label>Amazon URL / Product Link</label>
-  <input id="buyLink" placeholder="https://...">
-
-  <button onclick="addOrUpdateProduct()">Save Product</button>
-
-  <p id="success" class="success-message"></p>
-</div>
-
-<div class="product-list" id="productList"></div>
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Category</th>
+      <th>Price</th>
+      <th>Old Price</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody id="productTable"></tbody>
+</table>
 
 <script>
-let editingId = null; // Track which product is being edited
+let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+let editIndex = null;
 
-function escapeHTML(str) {
-  return str.replace(/[&<>"']/g, function(m) {
-    return ({
-      '&': '&amp;',
-      '<': '&lt;',
-      '>': '&gt;',
-      '"': '&quot;',
-      "'": '&#39;'
-    })[m];
-  });
-}
+const form = document.getElementById("productForm");
+const table = document.getElementById("productTable");
 
-function renderProducts() {
-  const productList = document.getElementById("productList");
-  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-
-  if (allProducts.length === 0) {
-    productList.innerHTML = `<p style="text-align:center; padding:50px;">No products added yet.</p>`;
-    return;
-  }
-
-  productList.innerHTML = "";
+function renderTable(){
+  table.innerHTML = "";
   allProducts.forEach((prod, index) => {
-    const div = document.createElement("div");
-    div.className = "product-item";
-    div.innerHTML = `
-      <span>${prod.name} - $${prod.salePrice}</span>
-      <div class="product-actions">
+    table.innerHTML += `<tr>
+      <td>${prod.name}</td>
+      <td>${prod.category || "Products"}</td>
+      <td>$${prod.salePrice}</td>
+      <td>${prod.oldPrice ? "$"+prod.oldPrice : "-"}</td>
+      <td>
         <button class="edit" onclick="editProduct(${index})">Edit</button>
         <button class="delete" onclick="deleteProduct(${index})">Delete</button>
-      </div>
-    `;
-    productList.appendChild(div);
+      </td>
+    </tr>`;
   });
 }
 
-function addOrUpdateProduct() {
-  const img = escapeHTML(document.getElementById("imgUrl").value.trim());
-  const name = escapeHTML(document.getElementById("productName").value.trim());
-  const desc = escapeHTML(document.getElementById("productDesc").value.trim());
-  const oldPrice = escapeHTML(document.getElementById("oldPrice").value.trim());
-  const salePrice = escapeHTML(document.getElementById("salePrice").value.trim());
-  const link = escapeHTML(document.getElementById("buyLink").value.trim());
+function resetForm(){
+  form.reset();
+  editIndex = null;
+}
 
-  if (!img || !name || !desc || !link) {
-    alert("Please fill out all required fields (image, name, description, link).");
-    return;
-  }
+form.addEventListener("submit", function(e){
+  e.preventDefault();
+  const product = {
+    name: document.getElementById("name").value,
+    desc: document.getElementById("desc").value,
+    img: document.getElementById("img").value,
+    salePrice: parseFloat(document.getElementById("salePrice").value),
+    oldPrice: document.getElementById("oldPrice").value ? parseFloat(document.getElementById("oldPrice").value) : null,
+    link: document.getElementById("link").value,
+    category: document.getElementById("category").value || "Products"
+  };
 
-  if (oldPrice && !salePrice) {
-    alert("If you enter an old price, you must enter a sale price.");
-    return;
-  }
-
-  if (!oldPrice && !salePrice) {
-    alert("Product must have at least a sale price.");
-    return;
-  }
-
-  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-  let saleProducts = JSON.parse(localStorage.getItem("saleProducts")) || [];
-
-  const productData = { img, name, desc, oldPrice, salePrice, link };
-
-  if (editingId !== null) {
-    // Update product
-    allProducts[editingId] = productData;
-    editingId = null;
+  if(editIndex !== null){
+    allProducts[editIndex] = product;
   } else {
-    // Add new product
-    allProducts.push(productData);
+    allProducts.push(product);
   }
 
   localStorage.setItem("allProducts", JSON.stringify(allProducts));
+  renderTable();
+  resetForm();
+});
 
-  // Update saleProducts
-  saleProducts = allProducts.filter(p => p.oldPrice);
-  localStorage.setItem("saleProducts", JSON.stringify(saleProducts));
-
-  // Reset form
-  document.getElementById("imgUrl").value = "";
-  document.getElementById("productName").value = "";
-  document.getElementById("productDesc").value = "";
-  document.getElementById("oldPrice").value = "";
-  document.getElementById("salePrice").value = "";
-  document.getElementById("buyLink").value = "";
-
-  const msg = document.getElementById("success");
-  msg.textContent = editingId !== null ? "✅ Product updated!" : "✅ Product added!";
-  msg.classList.add("success-show");
-  setTimeout(() => msg.classList.remove("success-show"), 2000);
-
-  renderProducts();
-}
-
-function editProduct(index) {
-  const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+// Edit product
+function editProduct(index){
   const prod = allProducts[index];
-
-  document.getElementById("imgUrl").value = prod.img;
-  document.getElementById("productName").value = prod.name;
-  document.getElementById("productDesc").value = prod.desc;
-  document.getElementById("oldPrice").value = prod.oldPrice;
+  document.getElementById("name").value = prod.name;
+  document.getElementById("desc").value = prod.desc;
+  document.getElementById("img").value = prod.img;
   document.getElementById("salePrice").value = prod.salePrice;
-  document.getElementById("buyLink").value = prod.link;
-
-  editingId = index;
+  document.getElementById("oldPrice").value = prod.oldPrice || "";
+  document.getElementById("link").value = prod.link;
+  document.getElementById("category").value = prod.category || "";
+  editIndex = index;
 }
 
-function deleteProduct(index) {
-  if (!confirm("Are you sure you want to delete this product?")) return;
-
-  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-  allProducts.splice(index, 1);
-  localStorage.setItem("allProducts", JSON.stringify(allProducts));
-
-  let saleProducts = allProducts.filter(p => p.oldPrice);
-  localStorage.setItem("saleProducts", JSON.stringify(saleProducts));
-
-  renderProducts();
+// Delete product
+function deleteProduct(index){
+  if(confirm("Are you sure you want to delete this product?")){
+    allProducts.splice(index,1);
+    localStorage.setItem("allProducts", JSON.stringify(allProducts));
+    renderTable();
+  }
 }
 
-// Initial render
-renderProducts();
+// Initial table render
+renderTable();
 </script>
 
 </body>
