--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@ nav ul li a.active{color:#1E90FF;font-weight:700;} /* Active tab */
 </header>
 
 <nav>
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="sale.html">Sale</a></li>
-<li><a href="#contact">Contact</a></li>
-</ul>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="featured.html">Featured</a></li>
+    <li><a href="sale.html">Sale</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
 </nav>
 
 <div class="search-container">
