--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ nav ul li a.active{color:#1E90FF;font-weight:700;} /* Active tab */
 .product-card{flex:0 0 200px;background:white;border-radius:12px;overflow:hidden;box-shadow:0 5px 15px rgba(0,0,0,0.1);transition:0.3s;}
 .product-card:hover{transform:translateY(-5px);}
 .product-card img{width:100%;height:180px;object-fit:contain;background:#f9f9f9;}
-.product-info{padding:10px;}
-.product-info h3{margin:0;font-size:1rem;font-weight:600;}
-.product-info .price{margin:5px 0;font-weight:700;color:#d40000;}
-.product-info a{display:inline-block;margin-top:10px;padding:6px 12px;background:#000;color:white;text-decoration:none;border-radius:8px;transition:0.3s;font-size:0.9rem;}
+.product-info{padding:10px;display:flex;justify-content:space-between;align-items:center;}
+.product-info h3{margin:0 0 8px 0;font-size:1rem;font-weight:600;width:100%;}
+.product-info .price{font-weight:700;color:#d40000;margin:0;}
+.product-info a{margin:0;padding:6px 12px;background:#000;color:white;text-decoration:none;border-radius:8px;transition:0.3s;white-space:nowrap;}
 .product-info a:hover{background:#333;}
 .search-container{width:100%;max-width:500px;margin:20px auto;}
 #searchBar{width:100%;padding:10px 15px;font-size:1rem;border-radius:10px;border:2px solid #ccc;outline:none;}
@@ -52,12 +52,12 @@ nav ul li a.active{color:#1E90FF;font-weight:700;} /* Active tab */
 </header>
 
 <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="featured.html">Featured</a></li>
-    <li><a href="sale.html">Sale</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="featured.html">Featured</a></li>
+<li><a href="sale.html">Sale</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
 </nav>
 
 <div class="search-container">
@@ -99,10 +99,9 @@ function displayCategories(productsByCategory){
           <div class="product-card">
             <img src="${prod.img}" alt="${prod.name}">
             <div class="product-info">
-              <h3>${prod.name}</h3>
-              <p class="price">
+              <span class="price">
                 ${prod.oldPrice ? `<span style="text-decoration:line-through;color:#777;">$${prod.oldPrice}</span> ` : ""}$${prod.salePrice}
-              </p>
+              </span>
               <a href="${prod.link}">Buy Now</a>
             </div>
           </div>
