--- a/featured.html
+++ b/featured.html
@@ -22,7 +22,7 @@
     color: white;
   }
 
-  header h1 { font-size: 3rem; margin:0; font-weight:700; letter-spacing:-1px; }
+  header h1 { font-size: 3rem; margin:0; font-weight:700; letter-spacing:-1px;}
   header p { margin-top:12px; font-size:1.2rem; opacity:0.85; }
 
   nav { background:#000; padding:15px 0; text-align:center; }
@@ -31,9 +31,8 @@
   nav ul li a { color:white; text-decoration:none; font-weight:600; font-size:1.1rem; transition:0.3s ease; }
   nav ul li a:hover { color:#aaa; }
 
-  /* Active tab style */
   nav ul li a.active {
-    color: #1E90FF; /* Blue */
+    color: #1E90FF;
     font-weight: 700;
   }
 
@@ -41,10 +40,26 @@
   .section-title { font-size:2.4rem; text-align:center; margin-bottom:40px; font-weight:700; }
 
   .search-container { width:100%; max-width:500px; margin:0 auto 40px auto; }
-  #searchBar { width:100%; padding:14px 18px; font-size:1rem; border-radius:12px; border:2px solid #ccc; background:white; outline:none; transition:0.3s; }
-  #searchBar:focus { border-color:#000; box-shadow:0 0 10px rgba(0,0,0,0.15); }
+  #searchBar {
+    width:100%;
+    padding:14px 18px;
+    font-size:1rem;
+    border-radius:12px;
+    border:2px solid #ccc;
+    background:white;
+    outline:none;
+    transition:0.3s;
+  }
+  #searchBar:focus {
+    border-color:#000;
+    box-shadow:0 0 10px rgba(0,0,0,0.15);
+  }
 
-  .product-grid { display:grid; grid-template-columns:repeat(auto-fill, minmax(280px, 1fr)); gap:35px; }
+  .product-grid {
+    display:grid;
+    grid-template-columns:repeat(auto-fill, minmax(280px, 1fr));
+    gap:35px;
+  }
 
   .product-card {
     background: rgba(255, 255, 255, 0.65);
@@ -60,20 +75,46 @@
     transition: box-shadow 0.5s ease;
   }
 
-  .product-card:hover { transform: translateY(-10px); box-shadow:0 15px 35px rgba(0,0,0,0.25); }
-  .product-card img, .product-card video { width:100%; height:260px; object-fit:contain; background:#f5f5f5; }
+  .product-card:hover {
+    transform: translateY(-10px);
+    box-shadow:0 15px 35px rgba(0,0,0,0.25);
+  }
+
+  .product-card img {
+    width:100%;
+    height:260px;
+    object-fit:contain;
+    background:#f5f5f5;
+  }
 
   .product-info { padding:20px; }
   .product-info h3 { margin:0; font-size:1.3rem; font-weight:600; }
   .product-info p { margin-top:8px; font-size:0.95rem; opacity:0.85; }
-  .product-info a {
-    display:inline-block; margin-top:14px; padding:12px 20px;
-    background:linear-gradient(135deg, #000 0%, #444 100%);
-    color:white; text-decoration:none; font-weight:600; border-radius:10px; transition:0.3s;
-  }
-  .product-info a:hover { transform: translateY(-3px); background:linear-gradient(135deg, #444 0%, #000 100%); }
 
-  footer { text-align:center; padding:25px; margin-top:50px; background:#111; color:white; }
+  .product-info a {
+    display:inline-block;
+    margin-top:14px;
+    padding:12px 20px;
+    background:linear-gradient(135deg, #000 0%, #444 100%);
+    color:white;
+    text-decoration:none;
+    font-weight:600;
+    border-radius:10px;
+    transition:0.3s;
+  }
+
+  .product-info a:hover {
+    transform: translateY(-3px);
+    background:linear-gradient(135deg, #444 0%, #000 100%);
+  }
+
+  footer {
+    text-align:center;
+    padding:25px;
+    margin-top:50px;
+    background:#111;
+    color:white;
+  }
 </style>
 </head>
 <body>
@@ -86,7 +127,7 @@
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="featured.html">Featured</a></li>
+    <li><a href="featured.html" class="active">Featured</a></li>
     <li><a href="sale.html">Sale</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
@@ -107,75 +148,69 @@
 </footer>
 
 <script>
+// URL for products.json
+const PRODUCTS_URL = "https://raw.githubusercontent.com/KhanceptDesigns/Khanceptdesign/main/products.json";
 const homeGrid = document.getElementById("homeProductGrid");
-const allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
+
+async function loadProducts() {
+  const response = await fetch(PRODUCTS_URL);
+  return response.json();
+}
 
 function displayProducts(grid, products){
   if(products.length === 0){
     grid.innerHTML = `<p style="text-align:center; font-size:1.2rem; padding:50px;">
       No products available yet. Please add products in the Admin Editor.
     </p>`;
-  } else {
-    grid.innerHTML = products.map((prod, index) => `
-      <div class="product-card" id="product-${index}">
-        <img src="${prod.img}" alt="${prod.name}" />
-        <div class="product-info">
-          <h3>${prod.name}</h3>
-          <p>${prod.desc}</p>
-          <p style="font-size:1.1rem; margin-top:10px;">
-            ${prod.oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${prod.oldPrice}</span>` : ""}
-            <span style="color:#d40000; font-weight:700; margin-left:${prod.oldPrice ? "10px" : "0"};">$${prod.salePrice}</span>
-          </p>
-          <a href="${prod.link}" target="_blank">Buy Now</a>
-        </div>
+    return;
+  }
+
+  grid.innerHTML = products.map((prod, index) => `
+    <div class="product-card" id="product-${index}">
+      <img src="${prod.image}" alt="${prod.name}" />
+      <div class="product-info">
+        <h3>${prod.name}</h3>
+        <p>${prod.desc || ""}</p>
+
+        <p style="font-size:1.1rem; margin-top:10px;">
+          ${prod.oldPrice ? `<span style="text-decoration: line-through; color:#777;">$${prod.oldPrice}</span>` : ""}
+          <span style="color:#d40000; font-weight:700; margin-left:${prod.oldPrice ? "10px" : "0"};">$${prod.price}</span>
+        </p>
+
+        <a href="${prod.link}" target="_blank">Buy Now</a>
       </div>
-    `).join("");
+    </div>
+  `).join("");
+}
+
+let allProducts = [];
+
+async function initFeaturedPage() {
+  allProducts = await loadProducts();
+  displayProducts(homeGrid, allProducts);
+
+  const urlParams = new URLSearchParams(window.location.search);
+  const productIndex = urlParams.get("product");
+
+  if(productIndex !== null){
+    const targetProduct = document.getElementById(`product-${productIndex}`);
+    if(targetProduct){
+      targetProduct.scrollIntoView({behavior: "smooth", block: "center"});
+      targetProduct.classList.add("highlight");
+      setTimeout(() => targetProduct.classList.remove("highlight"), 2000);
+    }
   }
 }
 
-// Display all products
-displayProducts(homeGrid, allProducts);
+initFeaturedPage();
 
-// Highlight product if URL parameter exists
-const urlParams = new URLSearchParams(window.location.search);
-const productIndex = urlParams.get("product");
-if(productIndex !== null){
-  const targetProduct = document.getElementById(`product-${productIndex}`);
-  if(targetProduct){
-    // Scroll to product
-    targetProduct.scrollIntoView({behavior: "smooth", block: "center"});
-    // Add temporary highlight
-    targetProduct.classList.add("highlight");
-    setTimeout(() => {
-      targetProduct.classList.remove("highlight");
-    }, 2000);
-  }
-}
-
-// Live Search
-document.getElementById("searchBar").addEventListener("keyup", function(){
-  const filter = this.value.toLowerCase();
-  const filtered = allProducts.filter(prod => 
-    prod.name.toLowerCase().includes(filter) || prod.desc.toLowerCase().includes(filter)
+document.getElementById("searchBar").addEventListener("keyup", () => {
+  const filter = searchBar.value.toLowerCase();
+  const filtered = allProducts.filter(prod =>
+    prod.name.toLowerCase().includes(filter) ||
+    (prod.desc || "").toLowerCase().includes(filter)
   );
   displayProducts(homeGrid, filtered);
-});
-
-// Highlight active navigation tab
-const navLinks = document.querySelectorAll("nav ul li a");
-const currentURL = window.location.pathname.split("/").pop();
-
-navLinks.forEach(link => {
-  const linkPage = link.getAttribute("href");
-  if(linkPage === currentURL || (linkPage === "index.html" && currentURL === "")){
-    link.classList.add("active");
-  } else {
-    link.classList.remove("active");
-  }
-  link.addEventListener("click", () => {
-    navLinks.forEach(l => l.classList.remove("active"));
-    link.classList.add("active");
-  });
 });
 </script>
 
